--- a/client/wfnews-war/src/main/angular/src/app/app.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/app.component.html
@@ -27,7 +27,7 @@
     <wfnews-panel-container
         [showLeftPanel]="false"
     >
-        <ng-container left-panel >
+        <ng-container>
             <!-- <router-outlet></router-outlet> -->
         </ng-container>
 
