WFNEWS-255 Add Active Wildfires count display

--- a/client/wfnews-war/src/main/angular/src/app/app.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/app.component.html
@@ -26,6 +26,10 @@
             <router-outlet></router-outlet>
         </ng-container>
 
+        <wf-active-fire-count-container
+            [config]="applicationConfig"
+        [(state)]="applicationState"></wf-active-fire-count-container>
+
         <wf-map-container right-panel
             [mapConfig]="mapConfig"
             (mapInitialized)="initMap($event)"
