--- a/client/wfnews-war/src/main/angular/src/app/app.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/app.component.html
@@ -7,30 +7,41 @@
     *ngIf="!extOutlet.isActivated"
     [config]="applicationConfig"
     [(state)]="applicationState"
+
 >
     <wf-header
         [config]="applicationConfig"
         [(state)]="applicationState"
+        [useAppLogo]="false"
+        [useSystemAndUser]="false"
+        [useMenu]="false"
+        (bcLogoClick)="navigateToBcWebsite()"
     ></wf-header>
 
-    <wf-menu
+    <wf-menu-bar
         [menuItems]="appMenu"
         [config]="applicationConfig"
         [(state)]="applicationState"
-    ></wf-menu>
+    ></wf-menu-bar>
 
     <wfnews-panel-container
-        [showLeftPanel]="showLeftPanel"
+        [showLeftPanel]="false"
     >
-        <ng-container left-panel >
-            <router-outlet></router-outlet>
+        <ng-container>
+            <!-- <router-outlet></router-outlet> -->
         </ng-container>
 
-        <wf-map-container right-panel
+        <wf-map-container 
             [mapConfig]="mapConfig"
             (mapInitialized)="initMap($event)"
         ></wf-map-container>
     </wfnews-panel-container>
 
-    <!-- <wf-footer></wf-footer> -->
+    <wf-footer
+        [footerItems]="footerMenu"
+        [config]="applicationConfig"
+        [(state)]="applicationState"
+        (activeItemChanged)="navigateToFooterPage($event)"
+    ></wf-footer>
+
 </wf-application>
