--- a/client/wfnews-war/src/main/angular/src/app/app.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/app.component.html
@@ -31,7 +31,12 @@
             <!-- <router-outlet></router-outlet> -->
         </ng-container>
 
-        <wf-map-container 
+        <wf-active-fire-count-container
+            [config]="applicationConfig"
+        [(state)]="applicationState">
+    </wf-active-fire-count-container>
+
+        <wf-map-container right-panel
             [mapConfig]="mapConfig"
             (mapInitialized)="initMap($event)"
         ></wf-map-container>
