display active fire cournts

--- a/client/wfnews-war/src/main/angular/src/app/components/wf-active-fire-count-container/wf-active-fire-count-container.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-active-fire-count-container/wf-active-fire-count-container.component.html
@@ -3,5 +3,20 @@
 </head>
 <div> 
     <p class="title">Active Wildfires Map</p>
-    <p class="wildfire-count"><i class="material-icons-outlined">local_fire_department</i> 67 Active Wildfires</p>
+    <p class="wildfire-count"><i class="material-icons-outlined">local_fire_department</i> {{activeFireCount}} Active Wildfires</p>
+</div>
+
+<div class = "map-layers">
+    <div class = "map-layer-item">Evacuation Orders and Alers</div>
+    <div class = "map-layer-item">Evacuation Orders and Alers</div>
+    <div class = "map-layer-item">Evacuation Orders and Alers</div>
+    <div class = "map-layer-item">Evacuation Orders and Alers</div>
+    <div class = "map-layer-item">Evacuation Orders and Alers</div>
+    <div class = "map-layer-item">Evacuation Orders and Alers</div>
+    <div class = "map-layer-item">Evacuation Orders and Alers</div>
+
+</div>
+
+<div>
+
 </div>
