--- a/client/wfnews-war/src/main/angular/src/app/components/wf-active-fire-count-container/wf-active-fire-count-container.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-active-fire-count-container/wf-active-fire-count-container.component.scss
@@ -23,3 +23,12 @@ i.material-icons-outlined {
     margin-bottom: 0px;
     padding-bottom: 0px;
 }
+
+.map-layers {
+    display: flex;
+    justify-content: center;
+}
+
+.map-layer-item {
+    padding: 10px 50px ;
+}
