--- a/client/wfnews-war/src/main/angular/src/app/components/wf-map-container/wf-map-container.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-map-container/wf-map-container.component.html
@@ -1,1 +1,4 @@
-<div #mapContainer class="smk-map-frame"></div>
+<div class="map-container"> 
+    <app-wf-left-panel></app-wf-left-panel>
+    <div #mapContainer class="smk-map-frame"></div>
+</div>
