--- a/client/wfnews-war/src/main/angular/src/app/components/wf-map-container/wf-map-container.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-map-container/wf-map-container.component.scss
@@ -1,6 +1,16 @@
+.map-container{
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    height: 100%;
+    border-top: 1px solid #dddddd;
+}
+
+
 .smk-map-frame {
     width: 100%;
     height: 100%;
+    order: 2
     // background-color: red;
 }
 
