--- a/client/wfnews-war/src/main/angular/src/app/app.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/app.component.html
@@ -37,7 +37,7 @@
             [(state)]="applicationState">
         </wf-active-fire-count-container> -->
 
-        <wf-map-container *ngIf = "router.url == '/activeWildfireMap'"
+        <wf-map-container *ngIf = "router.url === '/activeWildfireMap'"
             [mapConfig]="mapConfig"
             (mapInitialized)="initMap($event)"
         ></wf-map-container>
