--- a/client/wfnews-war/src/main/angular/src/app/components/wf-active-fire-count-container/wf-active-fire-count-container.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-active-fire-count-container/wf-active-fire-count-container.component.html
@@ -3,5 +3,21 @@
 </head>
 <div> 
     <p class="title">Active Wildfires Map</p>
-    <p class="wildfire-count"><i class="material-icons-outlined">local_fire_department</i> 67 Active Wildfires</p>
+    <p class="wildfire-count"><i class="material-icons-outlined">local_fire_department</i> {{activeFireCount}} Active Wildfires</p>
+</div>
+
+<div class = "map-layer-divider">
+    <span class = "map-layer-divider-text">
+      Map Layers <!--Padding is optional-->
+    </span>
+  </div>
+
+<div class = "map-layers">
+    <div class = "map-layer-item"><mat-icon class="map-layer-icon">error</mat-icon>Evacuation Orders and Alers</div>
+    <div class = "map-layer-item"><mat-icon class="map-layer-icon"></mat-icon>Area Restrictions</div>
+    <div class = "map-layer-item"><mat-icon class="map-layer-icon">block</mat-icon>Bans and Prohibitions</div>
+    <div class = "map-layer-item"><mat-icon class="map-layer-icon"></mat-icon>Smoke Forecast</div>
+    <div class = "map-layer-item"><mat-icon class="map-layer-icon">format_list_bulleted</mat-icon>Fire Danger</div>
+    <div class = "map-layer-item"><mat-icon class="map-layer-icon">place</mat-icon>Local Authorities</div>
+    <div class = "map-layer-item"><mat-icon class="map-layer-icon">directions_car_filled</mat-icon>Routes Impacted</div>
 </div>
