--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
@@ -5,13 +5,14 @@
     <div class="title">
         <h1>Active Wildfires Map</h1>
         <h2 class="wildfire-count">
-            <i class="material-icons-outlined">local_fire_department</i>
-            {{activeFireCount}} Active Wildfires
+            <wf-icon iconName="local_fire_department" iconSize="small"></wf-icon>
+            <!-- <i class="material-icons-outlined">local_fire_department</i> -->
+            {{ activeFireCount | async }} Active Wildfires
         </h2>
     </div>
 
     <div class="divider">
-        <span>Map Layers</span>
+        <span>MAP LAYERS</span>
     </div>
 
     <div class="map-layers">
