--- a/client/wfnews-war/src/main/angular/src/app/components/panel-evacuation-orders-and-alerts/panel-evacuation-orders-and-alerts.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-evacuation-orders-and-alerts/panel-evacuation-orders-and-alerts.component.html
@@ -30,7 +30,7 @@
             <a href="">List of Local Authorities</a>
         </p>
         <p>
-            <a href="">Forest Resource Road CLosures</a>
+            <a href="">Forest Resource Road Closures</a>
         </p>
         <p>
             <a href="">Broadcast Instrusive Alerts</a>
