--- a/client/wfnews-war/src/main/angular/src/app/app.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/app.component.scss
@@ -78,23 +78,104 @@
   -webkit-box-shadow: 2px 2px 11px #666;
 }
 
-// ::ng-deep wf-application {
-//     wf-menu .footer [menu-footer] {
-//         color: #454545;
-//         display: flex;
-//         flex-direction: column;
-//         justify-content: flex-start;
-//         align-items: center;
-//         font-size: 13px;
+.incident-form {
+  display: flex;
+  flex-wrap: wrap;
+  .size-third {
+    flex: 0 0 33.33%;
+    box-sizing: border-box;
+    padding: .5rem 1rem;
+  }
 
-//         &.collapsed {
-//             padding-top: 16px;
-//             padding-bottom: 16px;
-//         }
+  .size-half {
+    flex: 0 0 50%;
+    box-sizing: border-box;
+    padding: .5rem 1rem;
+  }
 
-//         &.expanded {
-//             padding-top: 24px;
-//             padding-bottom: 24px;
-//         }
-//     }
-// }
+  .size-two-thirds {
+    flex: 0 0 66.67%;
+    box-sizing: border-box;
+    padding: .5rem 1rem;
+  }
+
+  .size-full {
+    flex: 0 0 100%;
+    box-sizing: border-box;
+    padding: .25rem 1rem 0;
+  }
+
+  .location-controls {
+    display: flex;
+
+    mat-form-field {
+      flex: 1 1 auto;
+      padding-right: 1rem;
+    }
+
+    .location-buttons {
+      display: flex;
+
+      button.mat-button {
+        flex: 0 0 2rem;
+        min-width: 2rem;
+        width: 2rem;
+        min-height: 2rem;
+        height: 2rem;
+        padding: 0;
+
+        mat-icon {
+          min-width: 2rem;
+          width: 2rem;
+          min-height: 2rem;
+          height: 2rem;
+        }
+      }
+    }
+  }
+
+  .radio-checkbox-group {
+    position: relative;
+
+    mat-label {
+      position: absolute;
+      top: 0;
+      left: 1rem;
+      font-size: x-small;
+    }
+
+    mat-radio-group,
+    .checkbox-group {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+      padding-bottom: .5rem;
+
+      mat-radio-button,
+      mat-checkbox {
+        box-sizing: border-box;
+        padding-top: 1rem;
+        padding-right: 1rem;
+      }
+
+      .short-label {
+        flex: 0 0 6rem;
+        max-width: 6rem;
+      }
+
+      .long-label {
+        flex: 0 0 7rem;
+        max-width: 7rem;
+      }
+    }
+  }
+
+  .submit-controls {
+    display: flex;
+    justify-content: flex-end;
+    // padding-right: 5rem;
+    .flex-spacer {
+      flex: 1 1 auto;
+    }
+  }
+}
