--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.scss
@@ -39,13 +39,23 @@
     }
   }
 
-  .chip-holder {
+  .pub-chip {
     margin-left: 10px;
     padding: 4px;
     border: 2px solid green;
     border-radius: 4px;
     font-size: 12px;
     color: green;
+    font-weight: 700;
+  }
+
+  .unpub-chip {
+    margin-left: 10px;
+    padding: 4px;
+    border: 2px solid grey;
+    border-radius: 4px;
+    font-size: 12px;
+    color: grey;
     font-weight: 700;
   }
 
