adapt common component of wfnews-admin side (#25)
* first commit

* use incident manager as a kick off template

* update angular core to 12

* update angular material to 12

* manually address the lightGallery update

* angular 12 to 13

* angular 13 material update

* log4j2 update

* take out lightGallery

* delete unused stuff part 1

* delete unused stuff part 2

* delete unused stuff part 3

* delete unused stuff part 4

* delete unused stuff part 5, skip the tokenService

* rename to wfnews

* clean out unused asset files

* clean out unused layer configs

* more clean up

* sync with main

* fix the useless merge differences

* use wfcc new components

* hide side menu

* click footer navigate to related bcgov website

* change spring security core to 5.5.7

* change spring-security-web and spring-security-config to 5.5.7.Release

* change spring-security stuff form  5.5.7.Release to 5.5.7

* update spring-security-config in server pom

* initial commit of hooking up localhost api

* commit some state managements

* save ongoing work

* display active fire cournts

* map layers icon

* get rid of incidents store

* clean up

* left panel

* left panel

* Revert "left panel"

This reverts commit dd996ae444703b73251c6b30171c22404b3748ff.

* cancel the revert of last commit- left panel

* more clean up

* linter error fix 1

* Revert "Merge branch 'linting' into main"

This reverts commit bd401b4ae95c4194c8f320af49f9e20369c13788, reversing
changes made to 8b7f907b3659823df696aa5c54c42ff75f0ae87e.

* wfnews-365

* admin component

Co-authored-by: Dylan <dylan.hemsworth@gmail.com>

--- a/client/wfnews-war/src/main/angular/src/app/app.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/app.component.html
@@ -6,13 +6,16 @@
     <wf-header
         [config]="applicationConfig"
         [(state)]="applicationState"
-        [useAppLogo]="false"
-        [useSystemAndUser]="false"
-        [useMenu]="false"
+        [useAppLogo]="isAdminPage()"
+        [useSystemAndUser]="isAdminPage()"
+        [useMenu]="isAdminPage()"
+        [useSupportLink]="isAdminPage()"
+        [useLogoutButton]="isAdminPage()"
         (bcLogoClick)="navigateToBcWebsite()"
+        (navigateToBcSupport)="navigateToBcSupport()"
     ></wf-header>
 
-    <wf-menu-bar
+    <wf-menu-bar *ngIf ="!isAdminPage()"
         [menuItems]="appMenu"
         [config]="applicationConfig"
         [(state)]="applicationState"
