--- a/client/wfnews-war/src/main/angular/src/app/components/wf-admin-panel/wf-admin-panel.component.desktop.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-admin-panel/wf-admin-panel.component.desktop.html
@@ -1,6 +1,6 @@
 <div>
     <p class="dashboard-title">Dashboard: {{currentYearString}}</p>
-    <p class ="active-incidents" *ngIf="collectionData"><b> {{collectionData.length}} ACTIVE</b> Fire Incidents</p> 
+    <p class ="active-incidents" ><b> {{collectionData? collectionData.length : null}} ACTIVE</b> Fire Incidents</p> 
     <p class="datetime"> {{currentDateTimeString}}</p>     
 </div>
 
@@ -62,12 +62,12 @@
 
         <ng-container matColumnDef = "wildFireOfNote">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Wildfire of Note</th>
-            <td mat-cell style="cursor: pointer;" *matCellDef="let item"><span #el >{{item.fireOfNotePublishedInd}}</span></td>
+            <td mat-cell style="cursor: pointer;" *matCellDef="let item"><span #el >{{item.fireOfNotePublishedInd? 'Yes' : 'No'}}</span></td>
         </ng-container>
 
         <ng-container matColumnDef = "lastPublished">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Published</th>
-            <td mat-cell style="cursor: pointer;" *matCellDef="let item"><span #el >{{item.discoveryTimestamp}}</span></td>
+            <td mat-cell style="cursor: pointer;" *matCellDef="let item"><span #el >{{convertToDate(item.discoveryTimestamp)}}</span></td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay;sticky:true"></tr>
