align page control

--- a/client/wfnews-war/src/main/angular/src/app/components/wf-admin-panel/wf-admin-panel.component.desktop.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-admin-panel/wf-admin-panel.component.desktop.html
@@ -77,7 +77,7 @@
 
 <div class="bottom-summary flex-y-fixed">
     <div class="showing-summary">{{summaryString}}</div>
-    <pagination-controls [id]="config.id"
+    <pagination-controls style = "text-align:center" [id]="config.id"
                          [maxSize]="5"
                          [responsive]="false"
                          [directionLinks]="true"
