--- a/client/wfnews-war/src/main/angular/src/app/components/common/base-collection/collection.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/common/base-collection/collection.component.scss
@@ -26,6 +26,7 @@
     }
 
     td, th {
+      word-wrap: break-word;
       vertical-align: middle;
       overflow: hidden;
       text-overflow: ellipsis;
